# VoidCLI

./: Cargo.toml  README.md
crates/blocks/: Cargo.toml
crates/blocks/src/: block.rs  command.rs  lib.rs  navigation.rs  output.rs
crates/commands/: Cargo.toml
crates/commands/src/: completion.rs  history.rs  lib.rs  suggestions.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  events.rs  lib.rs  state.rs
crates/src/: lib.rs
crates/term/: Cargo.toml
crates/term/src/: lib.rs  parser.rs  process.rs  pty.rs  vt.rs
crates/themes/: Cargo.toml
crates/themes/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: renderer.rs
src/: config.rs  main.rs
