#Project: VoidCLI
#A modern GPU-accelerated terminal emulator built in Rust

#Cargo.toml (Root Project)
[package]
name = "VoidCLI"
version = "0.1.0"
edition = "2021"
authors = ["P Deepanshun"]
description = "A modern GPU-accelerated terminal emulator"

[workspace]
members = [
    "crates/core",
    "crates/ui",
    "crates/term",
    "crates/blocks",
    "crates/config",
    "crates/themes",
    "crates/commands",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
crossterm = "0.27"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
toml = "0.8"
tui = { package = "ratatui", version = "0.23" }
# Add workspace crates
config = { path = "crates/config" }
core = { path = "crates/core" }
