[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
anyhow = "1.0"
log = "0.4"
tokio = { version = "1.35", features = ["sync", "io-util", "process"] }
futures = "0.3"
crossterm = "0.27"
alacritty_terminal = "0.22"
nix = "0.27"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
